--- a/index.html
+++ b/index.html
@@ -105,20 +105,25 @@
 
     <section class="section" id="aboutme" style="padding-top: 100px;">
       <div class="container">
-        <h1 class="title">About Me</h1>
+        <h1 class="title" >About Me</h1>
+        
         <hr>
         <p>
+          <img src="./images/Jain_A_25.jpg" class="rounded float-right img-fluid" alt="...">
+          <br>
           I am an MS Mechanical Engineer from the University of Massachusetts, Amherst. I am currently working as a
           Research & Development Engineer at
           <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a>
-          and part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
+          and recently ended my part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
             target="_blank">ADDFab Lab</a> in Life Sciences Laboratories - UMass
           Amherst. I am focusing on Product and Process Design & Development, Lean Manufacturing & Industrial Automation
           and am always looking for new projects.
+
           If you'd like to learn more about my skills and qualifications, feel free to connect with me on
           <a href="https://www.linkedin.com/in/thisisasmit/" target="_blank">LinkedIn</a> or send a quick email at
           <a href="mailto:thisisasmit@gmail.com" target="-blank">thisisasmit@gmail.com</a>
         </p>
+
       </div>
     </section>
 
@@ -142,12 +147,12 @@
                 <h5 class="card-title">R&D Engineer</h5>
                 <p class="card-text">Excel Dryer, Inc - Massachusetts</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="ExcelDryer.html" target="_self">
+                  <a href="ExcelDryer_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
                   </a>
-                  <small class="text-muted">Nov 2019- Current</small>
+                  <small class="text-muted">Nov 2019 - Current</small>
                 </div>
               </div>
             </div>
@@ -160,12 +165,12 @@
                 <h5 class="card-title">3D Printing & Design Engineer</h5>
                 <p class="card-text">ADDFab Lab - Massachusetts</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="ADDFab.html" target="_self">
+                  <a href="ADDFab_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
                   </a>
-                  <small class="text-muted">Jan 2019 - Current</small>
+                  <small class="text-muted">Jan 2019 - Dec 2020 </small>
                 </div>
               </div>
             </div>
@@ -178,7 +183,7 @@
                 <h5 class="card-title">Research Assistant </h5>
                 <p class="card-text">Intelligent Sensing Lab - Massachusetts</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="ISLab.html" target="_self">
+                  <a href="ISLab_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
@@ -191,12 +196,12 @@
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
               <img class="bd-placeholder-img card-img-top" height="250px" width="auto"
-                src="./images/asmitjainVECVthumbnail.jpg" alt="">
+                src="./images/VECVpic5.png" alt="">
               <div class="card-body">
                 <h5 class="card-title">Technical Services Intern </h5>
                 <p class="card-text">Volvo - Eicher Commercial Vehicles - India</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="VECV.html" target="_self">
+                  <a href="VECV_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
@@ -214,7 +219,7 @@
                 <h5 class="card-title">Production Management Intern</h5>
                 <p class="card-text">MAN Trucks - India</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="MAN1.html" target="_self">
+                  <a href="MAN1_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
@@ -232,7 +237,7 @@
                 <h5 class="card-title">Sales & Application Engineer </h5>
                 <p class="card-text">MAHLE Engine Components - India</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="MAHLE.html" target="_self">
+                  <a href="MAHLE_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
@@ -245,12 +250,12 @@
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
               <img class="bd-placeholder-img card-img-top" height="250px" width="auto"
-                src="./images/asmitjainMAN2thumbnail.jpg" alt="">
+                src="./images/MAN1_2.jpg" alt="">
               <div class="card-body">
                 <h5 class="card-title">Maintenance Engineer Intern</h5>
                 <p class="card-text">MAN Trucks - India</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="MAN2.html" target="_self">
+                  <a href="MAN2_new.html" target="_self">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
@@ -281,13 +286,13 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.PNG"
+              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.png"
                 alt="">
               <div class="card-body">
                 <h5 class="card-title">Real-time Data Acquisition of Water Treatment System </h5>
                 <medium class="text-muted ">Automation | Data Acquisition | Python Programming | PowerBi</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project8.html" target="_self">
+                  <a href="Project8_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -305,7 +310,7 @@
                 <h5 class="card-title">3D Scanner for Medical Applications</h5>
                 <medium class="text-muted"> SolidWorks | FEA | Prototyping | 3D Printing | PI Controllers</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project1.html" target="_self">
+                  <a href="Project1_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -325,7 +330,7 @@
                 <medium class="text-muted">Data Analysis | Predictive Maintenance | Vibration Analysis | NI DAQ | MATLAB
                   | ML</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project2.html" target="_self">
+                  <a href="Project2_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -344,7 +349,7 @@
                 <h5 class="card-title">PLC Programming for Industrial Automation </h5>
                 <medium class="text-muted">PLC Programming | Allen-Bradley Rockwell Automation RSLogix 500</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project3.html" target="_self">
+                  <a href="Project3_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -364,7 +369,7 @@
                 <medium class="text-muted">HMI & SCADA | Siemens TIA Portal | P&ID | Wonderware | EasyBuilder 5000
                 </medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project4.html" target="_self">
+                  <a href="Project4_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -384,7 +389,7 @@
                 <medium class="text-muted"> SolidWorks | FEA | Optimization | Sturtural & Dynamic Analysis | ANSYS
                 </medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project5.html" target="_self">
+                  <a href="Project5_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -403,7 +408,7 @@
                 <h5 class="card-title">Negative Poisson Ration Structure using Lithography</h5>
                 <medium class="text-muted">Auxetics | Soft Lithography | SEM | PDMS</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project6.html" target="_self">
+                  <a href="Project6_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -422,7 +427,7 @@
                 <h5 class="card-title">Baja SAE ATV Challenge</h5>
                 <medium class="text-muted">Design | Prototyping | Manufacturing | Machine Shop | Automobile</medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Project7.html" target="_self">
+                  <a href="Project7_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -441,7 +446,7 @@
                 <h5 class="card-title">Other Projects</h5>
                 <medium class="text-muted">Multiple Domains: MATLAB | SIMULINK | CONTROLS </medium>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="Other Projects.html" target="_self">
+                  <a href="Other Projects_new.html" target="_self">
                     <br>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -472,6 +477,7 @@
           <button type="button" class="btn btn-outline-secondary m-2">CATIA</button>
           <button type="button" class="btn btn-outline-secondary m-2">Pro-E/ Creo</button>
           <button type="button" class="btn btn-outline-secondary m-2">ANSYS</button>
+          <button type="button" class="btn btn-outline-secondary m-2">Siemens NX*</button>
         </div>
         <div class="row m-3">
           <h4 class="sub-title p-2">3D Printing & Prototyping</h4>
@@ -579,7 +585,7 @@
     <!-- CONTACT -->
     <!-- CONTACT -->
     <!-- CONTACT -->
-    <section class="section">
+    <section class="section" id="contacts">
       <div class="container">
         <h1 class="title" style="padding-top: 40px;" >Contacts</h1>
         <hr />
