--- a/Project8_new.html
+++ b/Project8_new.html
@@ -196,43 +196,43 @@
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_13.PNG"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_14.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_14.png"alt="First slide">
                     <div class="carousel-caption d-none d-md-block text-primary">
                       <h5>CSV File</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_15.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_15.png"alt="First slide">
                     <div class="carousel-caption d-none d-md-block text-primary">
                       <h5>PowerBi Interface</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_16.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_16.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_17.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_17.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_18.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_18.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_19.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_19.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_20.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_20.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_21.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_21.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_22.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_22.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_23.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_23.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_24.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP8_24.png"alt="First slide">
                   </div>
                 <a class="carousel-control-prev btn-dark" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
