--- a/Project5_new.html
+++ b/Project5_new.html
@@ -154,13 +154,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_1.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_1.png"alt="First slide">
                     <div class="carousel-caption d-none d-md-block text-primary">
                       <h5></h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_2.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_2.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_3.PNG"alt="First slide">
@@ -169,16 +169,16 @@
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_4.PNG"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_5.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_5.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_6.PNG"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_7.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_7.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_8.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_8.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_9.PNG"alt="First slide">
@@ -214,16 +214,16 @@
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_17.PNG"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_18.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_18.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_19.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_19.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_20.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_20.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_21.PNG"alt="First slide">
+                    <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_21.png"alt="First slide">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-50 mx-auto" src="./images/asmitjainP5_22.PNG"alt="First slide">
