--- a/ExcelDryer_new.html
+++ b/ExcelDryer_new.html
@@ -137,11 +137,11 @@
           <div class="row gx-5 pt-4">
             <div class="col">
               <h4 class="card-title">Highlights & Achievements</h4>
-              <div class="p-3 border bg-light">• Designed and prototyped a water-proof dryer optics, that is submersible upto 30min, to avoid damages/faults due to corrosion.
+              <div class="p-3 border bg-light">• Designed and prototyped a water-proof dryer optics, that is submersible up to 30min, to avoid damages/faults due to corrosion.
                 <br>
                 <br>• Developed a low-cost testing fixture for performing electrical & Hi-Pot testing for a new product line. Its unique design can test existing products resulting in less setup time during mass-production.
                 <br>
-                <br>• Started Environmental Testing for all the components to evaluate the performance at varied temperature/ humidity. It will let company to export products to countries with varied environmental conditions.
+                <br>• Started Environmental Testing for all the components to evaluate the performance at varied temperature/ humidity. It will let the company to export products to countries with varied environmental conditions.
                 <br>
                 <br>• Collaborated as an essential employee in the rapid production of new products to fight COVID pandemic. From getting new parts, deciding packing, planning schedules, and complying products with safety/ quality certification within a month was a fantastic experience. 
                 <br>
@@ -171,13 +171,13 @@
               <div class="p-3 border">
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item bg-light">Managing CAD modelling and testing for all pilot fixtures to help production people to reduce cycle time. Implementing DFA & DFM principles and integrating electrical components for validating the conceptual design and its mechanisms.</li>
-                  <li class="list-group-item">Aiding in product’s programming and controlling languages to understand, evaluate and modify the its behavior and improve its performance.   </li>
-                  <li class="list-group-item bg-light">Collaborating in research & development of new products with cross functional teams like quality, production, planning and sales. Redesigning & modifying existing models based on their performance and evaluation.</li>
+                  <li class="list-group-item">Aiding in product’s programming and controlling languages to understand, evaluate and modify its behavior and improve its performance.   </li>
+                  <li class="list-group-item bg-light">Collaborating in research & development of new products with cross-functional teams like quality, production, planning and sales. Redesigning & modifying existing models based on their performance and evaluation.</li>
                   <li class="list-group-item">Assisting in Electromagnetic Compatibility devices and Low Voltage Devices certifications for different countries, performing modifications to certify the products. Focusing on UL, ULc, CE, GMark, etc.</li>
                   <li class="list-group-item bg-light">Perform troubleshooting of tools and devices used in production lines and provide full technical support by improving and refurbishing components with RCA, DFMEA & PFMEA.   </li>
                   <li class="list-group-item">Designing different components and promoting rapid prototyping using in-house 3D printing and conventional machining facilities like bed mill, lathe, etc. Enjoying hands-on machines and learning about various machine shop tools, CNC code and materials.   </li>
                   <li class="list-group-item bg-light"> Assisting in Electromagnetic Compatibility devices and Low Voltage Devices certification for different countries, performing modifications to certify the products. Focusing on UL, ULc, CE, GMark, etc.</li>
-                  <li class="list-group-item"> Interacting with vendors and suppliers to develop high quality parts, from developing tools/ fixture for mass production to CNC, injection molded, 3D printed parts.   </li>
+                  <li class="list-group-item"> Interacting with vendors and suppliers to develop high-quality parts, from developing tools/ fixture for mass production to CNC, injection-molded, 3D printed parts.   </li>
                   <li class="list-group-item"> Developing in-house testing rigs for key specs to check the product’s quality, safety and performance. Implementing DOE principles to keep track of the testing procedures for traceability and consistency with complete documentation. </li>
                 </ul>
               </div>
