--- a/ISLab_new.html
+++ b/ISLab_new.html
@@ -223,7 +223,7 @@
                 <br>
                 <br>•	Used 5 different Machine Learning Classifiers on the actual data set from a drill machine to achieve fault detection & prediction accuracies over 85%. 
                 <br>
-                <br>•	Conducted vibration analysis of two different machines using accelerometers, NI DAQ devices LabVIEW & MATLAB. Eliminated system noise by analyzing large amount of data for preventing tool & equipment failures by implementing DOE & SPC principles.
+                <br>•	Conducted vibration analysis of two different machines using accelerometers, NI DAQ devices LabVIEW & MATLAB. Eliminated system noise by analyzing a large amount of data for preventing tool & equipment failures by implementing DOE & SPC principles.
                 <br>
               </div>
 
