--- a/VECV_new.html
+++ b/VECV_new.html
@@ -173,9 +173,9 @@
                   </li>
                   <li class="list-group-item">Examined root causes for equipment breakdowns and high lead time by analysing existing production processes and operations of 6 different engines by performing modification, testing & troubleshooting using MES.</li>
                   <li class="list-group-item bg-light">Undertook projects for relocating, refurbishing, and upgrading engine assembly equipment at a new location with vendors to reduce overall lead time, operation cost, optimized throughput.</li>
-                  <li class="list-group-item">Conducted cycle time analysis & pilot studies to evaluate & validate the the modification on engine assembly line with production team.</li>
+                  <li class="list-group-item">Conducted cycle time analysis & pilot studies to evaluate & validate the engine assembly lines' modification with the production team.</li>
                   <li class="list-group-item bg-light">Prepared PFMEA reports by calculating RPN to mitigate process failures and presented it to the VECV Technical Heads.</li>
-                  <li class="list-group-item">Worked on vision system for quality inspection and FANUC robot on engine assembly line to analyze & circumvent malfunctioning of systems.</li>
+                  <li class="list-group-item">Worked on the vision system for quality inspection and FANUC robot on the engine assembly line to analyze & circumvent malfunctioning of systems.</li>
                 </ul>
               </div>
             </div>
