--- a/MAN1_new.html
+++ b/MAN1_new.html
@@ -167,7 +167,7 @@
                   <li class="list-group-item bg-light">Optimize the current material storage systems for the Front and Rear Axle with consideration of the protection, storage, and control of materials throughout their manufacturing, warehousing, distribution, consumption, and disposal.</li>
                   <li class="list-group-item">Responsible for tracking and analysing downtime, identifying opportunities for process improvement and monitoring effectiveness of changes by taking trials.</li>
                   <li class="list-group-item bg-light">Improved material handling to create time and place utility through the handling, storage, and control of material, as distinct from manufacturing, which creates form utility by changing the shape, form, and makeup of the material.</li>
-                  <li class="list-group-item">Reduced the storage racks to confine the machines and working table in an optimal or near optimal area for making space for new projects.</li>
+                  <li class="list-group-item">Reduced the storage racks to confine the machines and working table in an optimal or near-optimal area for making space for new projects.</li>
                 </ul>
               </div>
             </div>
