--- a/MAHLE_new.html
+++ b/MAHLE_new.html
@@ -184,7 +184,7 @@
                   <li class="list-group-item bg-light">Coordinated in schedule and supply monitoring, logistics, eCommerce and Incoterms for the supply chain management.</li>
                   <li class="list-group-item bg-light">Conducted a thorough study about different types of materials like the chill cast, ductile iron with shot blasting, crack testing, heat treatment processes like Nitriding, Phosphating, Induction Hardening, Tempering & Stress Relieving.</li>
                   <li class="list-group-item">Understood the foundry/ machining processes with inspection techniques like green/ shell sand, ADCOLE, 3CMM, roundness and surface finish tester, case hardening, case depth, grinding burns, 32 channel spectrometer, etc.</li>
-                  <li class="list-group-item">Worked with the production team to resolve casting and machining problems on the manufacturing lines, took lead on process modifications.</li>
+                  <li class="list-group-item">Worked with the production team to resolve casting and machining problems on the manufacturing lines, took the lead on process modifications.</li>
                   
                 </ul>
               </div>
