--- a/MAN2_new.html
+++ b/MAN2_new.html
@@ -170,7 +170,7 @@
               <div class="p-3 border">
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Conducted detailed research on Horizontal Milling Center Machines and Vertical Milling Center Machines and its components. It included Machine body, CNC system, Electrical cabinet, Pneumatic system, Coolant system, Guards, Tool magazine.</li>
-                  <li class="list-group-item bg-light">Computed a detailed report and presented my project on Hydraulics, Pneumatics and Kinematics to team members and departmental head upon internship completion. Studeied equipment from Bosch, EATON and Yuken</li>
+                  <li class="list-group-item bg-light">Computed a detailed report and presented my project on Hydraulics, Pneumatics and Kinematics to team members and departmental head upon internship completion. Studied equipment from Bosch, EATON and Yuken</li>
                   <li class="list-group-item">Studied Finish line for engines to focus on removing a small amount of material and perform finishing operations. I learned 8 Spindle Boring machine, 10 Spindle Drilling and Tapping machine, Piston Bore Honing, etc.</li>
                   <li class="list-group-item bg-light">Observed and scrutinize Semi-Finish for 6 different types of MAN engines that helped me to understand how a large amount of material is removed from engine block castings. It involved detailed processes from receiving material from the vendors to mounting it various HMC & VMC using jigs & fixtures.</li>
                   <li class="list-group-item">Support Dead Axle and Engine Cylinder Head team for routine machine maintenance operations.</li>
