--- a/Project8_new.html
+++ b/Project8_new.html
@@ -279,9 +279,9 @@
                   <li class="list-group-item bg-light">Wrote a complete python code to automate and control the system and its processes.</li>
                   <li class="list-group-item">Saved data in CSV format and performed live conversion in JSON format for pushing data to the cloud.</li>
                   <li class="list-group-item bg-light">Generated APIs to push data from the RPi to the cloud-based storage and perform data conversion in real-time.</li>
-                  <li class="list-group-item">Developed complete interface in PowerBi to monitor system's health and perform live data analysis.</li>
+                  <li class="list-group-item">Developed a complete interface in PowerBi to monitor the system's health and perform live data analysis.</li>
                   <li class="list-group-item bg-light"> Integrated RPi, industrial-grade data loggers, sensors, motors with complete electrical connections.</li>
-                  <li class="list-group-item"> Completed the whole project within two months and submited it to the client with complete documentation.</li>
+                  <li class="list-group-item"> Completed the whole project within two months and submitted it to the client with complete documentation.</li>
                 </ul>
               </div>
             </div>
