--- a/Project1_new.html
+++ b/Project1_new.html
@@ -197,7 +197,7 @@
           <div class="row gx-5 pt-3">
             <div class="col">
               <h4 class="card-title">Project Summary</h4>
-              <div class="p-3 border bg-light">• Developed a conceptual electromechanical device for 3D scanning and measuring medical tissues by CAD modelling/ prototyping, integrating hardware with electricals and evaluate design.
+              <div class="p-3 border bg-light">• Developed a conceptual electromechanical device for 3D scanning and measuring medical tissues by CAD modelling/ prototyping, integrating hardware with electricals and evaluate the design.
                 <br>
                 <br>• Used Photogrammetry to capture high resolution, reliable images and combine them together for medical applications e.g. Monoclonal cells or manufacturing industries for macroscopic products.
               </div>
@@ -222,7 +222,7 @@
               <div class="p-3 border">
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item bg-light">Equipment included TMC optical bench, an advanced building floor vibration isolation systems, PI Rotational Stage, Basler Camera Unit with CMOS sensor, Mitutoyo Objective Lens and some 3D printed parts.</li>
-                  <li class="list-group-item">Performed analysis using ANSYS Workbench to calculate the total deformation when the optical unit is placed on to the arm with the help of the slider. All the forces were condidered to avoid bending.</li>
+                  <li class="list-group-item">Performed analysis using ANSYS Workbench to calculate the total deformation when the optical unit is placed on to the arm with the help of the slider. All the forces were considered to avoid bending.</li>
                   <li class="list-group-item bg-light">Wrote a complete code to automate and control the measuring system. </li>
                 </ul>
               </div>
