--- a/Project5_new.html
+++ b/Project5_new.html
@@ -272,11 +272,11 @@
               <h4 class="card-title">Highlights</h4>
               <div class="p-3 border">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item bg-light">Designed a FSAE chassis using SolidWorks following the guidlines given in the rulebook.</li>
+                  <li class="list-group-item bg-light">Designed an FSAE chassis using SolidWorks following the guidelines given in the rulebook.</li>
                   <li class="list-group-item">Conducted detailed design methodology analysis of Beam element (1-D line), Shell element (2-D plane) and Solid element (3-D solid) based on the accuracy and computation speed.</li>
                   <li class="list-group-item bg-light">Created global and local model of the chassis to scrutinize critical components and get super accurate results.</li>
-                  <li class="list-group-item">Analyzed the chassid for twisting, vibrations, shock, buckling and other variety of stresses due to loads, forces, weight transfer etc. </li>
-                  <li class="list-group-item bg-light">Compared different materials like chromoly steel  4130 & 1018 based on strength to weight ratio, density, machinability, chip formation and corrosion resistance. </li>
+                  <li class="list-group-item">Analyzed the chassis for twisting, vibrations, shock, buckling and other variety of stresses due to loads, forces, weight transfer etc. </li>
+                  <li class="list-group-item bg-light">Compared different materials like Chromoly steel  4130 & 1018 based on strength to weight ratio, density, machinability, chip formation and corrosion resistance. </li>
                 </ul>
               </div>
             </div>
