--- a/Project6_new.html
+++ b/Project6_new.html
@@ -164,9 +164,9 @@
           <div class="row gx-5 pt-3">
             <div class="col">
               <h4 class="card-title">Project Summary</h4>
-              <div class="p-3 border bg-light">• Fabricated a micron-scale auxetic structure using two different lithography techniques: Photolithography & Soft lithography, an optical means to transfer patterns on to a surface.
+              <div class="p-3 border bg-light">• Fabricated a micron-scale auxetic structure using two different lithography techniques: Photolithography & Soft lithography, an optical means to transfer patterns to a surface.
                 <br>
-                <br>• Designed and developed a bow-tie structure on a substrate using photomask and photoresist, prepared a master mold by Photolithography and used a soft polymer Polydimethylsiloxane ( PDMS) to create a negative pattern of a bow-tie structure 
+                <br>• Designed and developed a bow-tie structure on a substrate using photomask and photoresist, prepared a master mould by Photolithography and used a soft polymer Polydimethylsiloxane ( PDMS) to create a negative pattern of a bow-tie structure 
                 <br>
                 <br>
                 <button type="button" class="btn btn-dark" onclick="window.open('https://www.youtube.com/watch?v=fHn3kq9rKbw','_blank');" alt="Link to Project Video">Project Video</button>
