--- a/Project7_new.html
+++ b/Project7_new.html
@@ -270,7 +270,7 @@
                   <li class="list-group-item">Aided in conducting Finite Element Analysis using ANSYS for static & dynamic testing.</li>
                   <li class="list-group-item bg-light">Optimized the vehicle components and achieved overall weight reduction by 30%</li>
                   <li class="list-group-item">Led the team as Financial, Marketing/ Sponsorship Head and managed over USD 9,000.</li>
-                  <li class="list-group-item bg-light"> Resposible for desiging, assembly & testing of vehicle's braking & steering sub-systems.</li>
+                  <li class="list-group-item bg-light"> Responsible for designing, assembly & testing of vehicle's braking & steering sub-systems.</li>
                   <li class="list-group-item"> Headed and tested the quality of the complete vehicle with complete reporting & documentation.</li>
                 </ul>
               </div>
