--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
         <p>
           <img src="./images/Jain_A_25.jpg" class="rounded float-right img-fluid" alt="...">
           <br>
-          I am an MS Mechanical Engineer from the University of Massachusetts, Amherst. I am currently working as a
-          Research & Development Engineer at
-          <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a>
-          and recently ended my part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
+          I am an MS Mechanical Engineer from the University of Massachusetts, Amherst. I'll be working with <a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank">Intel Corporation.</a> 
+          as a Cross Module Support Operational Engineer from March 15, 2021. I recently ended my full-time with <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a> part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
             target="_blank">ADDFab Lab</a> in Life Sciences Laboratories - UMass
           Amherst. I am focusing on Product and Process Design & Development, Lean Manufacturing & Industrial Automation
           and am always looking for new projects.
@@ -142,6 +140,24 @@
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
               <img class="bd-placeholder-img card-img-top" height="250px" width="auto"
+                src="./images/asmitjainIntel1.jpg" alt="">
+              <div class="card-body">
+                <h5 class="card-title">CMS Engineer</h5>
+                <p class="card-text">Intel Corporation - Oregon</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <a href="Intel_new.html" target="_self">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </div>
+                  </a>
+                  <small class="text-muted">March 2021 - Current</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="bd-placeholder-img card-img-top" height="250px" width="auto"
                 src="./images/asmitjainEDFabthumbnail.jpg" alt="">
               <div class="card-body">
                 <h5 class="card-title">R&D Engineer</h5>
@@ -152,7 +168,7 @@
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </div>
                   </a>
-                  <small class="text-muted">Nov 2019 - Current</small>
+                  <small class="text-muted">Nov 2019 - March 2021</small>
                 </div>
               </div>
             </div>
@@ -286,7 +302,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.PNG"
+              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.png"
                 alt="">
               <div class="card-body">
                 <h5 class="card-title">Real-time Data Acquisition of Water Treatment System </h5>
